# numerous-widgets

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  vite.config.mts
css/: styles.css
docs/: README.md  process_task.md  save_load_widget.md  state_model.md  styling.md  templating.md  widgets.md
examples/: __init__.py  configuration_management_system.py  save_load_example.py
js/: build-widgets.ps1  (+9 more)
python/: README.md  pyproject.toml
python/examples/: timeline_example.py
python/examples/marimo/: app.py  sim_app.py  state_app.py  test.txt
python/examples/marimo/numerous/: .tmp_app_archive.tar  _Dockerfile  app.py  app_loadsave.py  numerous.toml  page.html.j2  page.py  requirements.txt  timeline_data.h5  timeline_data.json
python/examples/panel/: app.py
python/src/: app.py
python/src/numerous/widgets/: __init__.py  loadsave.py
python/src/numerous/widgets/advanced/: weighted_assessment_survey.py
python/src/numerous/widgets/base/: accordion.py  button.py  card.py  chartjs.py  chat.py  checkbox.py  config.py  container.py  datetime_picker.py  datetime_range_picker.py  drop_down.py  map_selector.py  markdown_display.py  modal_dialog.py  number.py  plotly.py  progress_bar.py  radio_buttons.py  slider.py  string.py  table.py  tabs.py  task.py  timer.py
python/src/numerous/widgets/files/: load_save_from_local.py
python/src/numerous/widgets/numerous/: project.py  projects.py  stress_test_projects.py
python/src/numerous/widgets/state/: model.py
python/src/numerous/widgets/static/: ChartWidget.mjs  ChatWidget.mjs  MapSelectorWidget.mjs  MarkdownDisplayWidget.mjs  MarkdownDrawerWidget.css  MarkdownDrawerWidget.mjs  ModalDialogWidget.mjs  ProjectMenuWidget.mjs  TableWidget.mjs  TaskWidget.mjs  TreeBrowserWidget.mjs  styles.css
python/src/numerous/widgets/task/: process_task.py
python/src/numerous/widgets/templating/: __init__.py
python/src/state/: _handler.py
python/src/widget/: number_widget.py  project_widget.py
python/src/widget/static/: ProjectMenuWidget.mjs
python/src/widgets/: __init__.py  base.py  button.py  button_widget.py  card_widget.py  checkbox.py  config.py  drop_down.py  drop_down_widget.py  html_widget.py  map_selector.py  number.py  number_widget.py  process_task.py  project_widget.py  scenario_input_widget.py  tabs.py  tabs_widget.py  task.py  timer.py
python/src/widgets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/widgets/base/: checkbox.py  config.py  markdown_drawer.py  progress_bar.py  task.py
python/src/widgets/static/: NumberInputWidget.mjs  ProjectMenuWidget.mjs  index-DQLPm7-6.mjs  style.css
python/src/widgets/task/: process_task.py
python/tests/: test_cli.py  test_copy_to_clipboard.py  test_core_logic.py  test_loadsave.py  test_loadsave_disable_controls.py  test_loadsave_rename_functionality.py  test_loadsave_save_as_target_names.py  test_mockup.py  test_state_handler.py
(+144 files in other folders)
