[project]
name = "numerous-widgets"
version = "0.0.0"
dependencies = ["anywidget"]
classifiers = ["Programming Language :: Python :: 3"]
readme = "README.md"


[tool.setuptools]
packages.find = {where = ["python/src"]}

[project.optional-dependencies]
dev = [
    "anywidget[dev]",
    "python-dotenv",
    "numerous",
    "pytest",
    "ruff==0.6.4",
    "mypy==1.11.2",
    "coverage==7.6.1",
    "twine==5.1.1",
    "mkdocs==1.6.0",
    "mkdocstrings==0.26.2",
    "mkdocstrings-python==1.12.2",
    "mkdocs_snippet_plugin==1.0.2",
    # for testing related to frameworks
    "marimo",
    "panel"
]

[tool.poetry.dependencies]
python-dotenv = "^1.0.0"

[tool.semantic_release]
branch = "main"
commit_parser = "angular"
version_toml = ["pyproject.toml:project.version"]
template_dir = "templates"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Merged? .*''',
    '''initial commit''',
]