[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widgets"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"
packages = [
    { include = "widgets", from = "src" }
]

[project.optional-dependencies]
dev = ["anywidget[dev]"]
marimo = ["marimo"]
numerous = ["numerous"]

[dependency-groups]
dev = ["anywidget[dev]"]
marimo = ["marimo"]
numerous = ["numerous"]

[tool.hatch.build]
only-packages = true
artifacts = ["src/widgets/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/widgets/static/widget.js"]
skip-if-exists = ["src/widgets/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
