[project]
name = "widgets"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

[project.optional-dependencies]
dev = ["anywidget[dev]", "python-dotenv"]
marimo = ["marimo"]
numerous = ["numerous"]

[tool.setuptools]
packages.find = {where = ["src"]}

[dependency-groups]
dev = ["anywidget[dev]", "python-dotenv"]
marimo = ["marimo"]
numerous = ["numerous"]

[tool.poetry.dependencies]
python-dotenv = "^1.0.0"