[project]
name = "widgets"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"

[project.optional-dependencies]
dev = ["anywidget[dev]", "python-dotenv", "marimo", "numerous"]

[tool.setuptools]
packages.find = {where = ["src"]}

[dependency-groups]
dev = ["anywidget[dev]", "python-dotenv", "marimo", "numerous"]

[tool.poetry.dependencies]
python-dotenv = "^1.0.0"